# TA

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  conf.py  index.md  installation.md  quickstart.md  temperature_programs.md
ta/: __init__.py  plotter.py  signals.py  simulator.py  temperature_program.py
tests/: conftest.py  test_integration.py  test_plotter.py  test_signals.py  test_simulator.py  test_temperature_program.py
