[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta"
version = "0.1.0"
description = "Thermal analysis (TGA/DTA/DTG/MS) simulator using Cantera"
requires-python = ">=3.12"
dependencies = [
    "cantera>=3.0",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
